--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <header class="cabeçalho">
             <div class="container">
                 <input type="checkbox" id="menu" class="container__botao">
-                <label for="menu">
-                    <span class="cabeçalho__menu-hamburger container__imagem"></span>
+                <label for="menu" class="container__rotulo">
+                    <span class="cabecalho__menu-hamburger container__imagem"></span>
                 </label>
 
                 <ul class="lista-menu">
@@ -45,7 +45,7 @@
 
             <ul class="cabecalho__lista">
                 <input type="checkbox" id="opcoes-menu" class="opcoes-botao">
-                <label for="opcoes-menu">
+                <label for="opcoes-menu" class="opcoes__rotulo">
                     <li class="cabecalho__lista-item">Categorias</li>
                 </label>
                 <ul class="lista-menu">
